# chat

./: README.md
MyApplication/: CMakeLists.txt  LoadingOverlay.h  commonutils.cpp  commonutils.h  commonutils.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlaywidget.cpp  overlaywidget.h  secondwindow.cpp  secondwindow.h  secondwindow.ui  thirdwindow.cpp  thirdwindow.h  thirdwindow.ui
backend/: docker-compose.yaml
backend/Models/: User.h
backend/my_project/: CMakeLists.txt  config.json  main.cc
backend/my_project/Controller/: UserController.cc  UserController.h
backend/my_project/Models/: User.h
backend/my_project/Repository/: UserRepository.cc  UserRepository.h
backend/my_project/Service/: UserService.cc  UserService.h
